# salvo-api

./: .env.dist  Cargo.toml
src/: db.rs  main.rs  routes.rs
src/controllers/: user.rs
src/middlewares/: auth.rs
src/models/: user.rs
