[package]
name = "salvo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["jwt-auth"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "mysql" ] }
serde_json = "1.0"
dotenv = "0.15.0"
once_cell = "1"
uuid = {version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"]}
jsonwebtoken = "8.3"
